force-app/main/default/objects/Vote_Record__c/Vote_Record__c.object-meta.xml
<CustomObject>
    <description>Custom object to store the vote record for a record for a user.</description>
    <label>Vote Record</label>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>Vote Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vote Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>