force-app/main/default/objects/Vote_Record__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Field to store the API name of the object for which record is created.</description>
    <label>Object API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>