force-app/main/default/objects/Vote_Record__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Field to store the Record Id of the record for which vote is stored.</description>
    <label>Record Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>