force-app/main/default/objects/Vote_Record__c/fields/User_Voted__c.field-meta.xml
<CustomField>
    <fullName>User_Voted__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to store the user information who voted on a record.</description>
    <label>User Voted</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vote_Records</relationshipName>
    <type>Lookup</type>
</CustomField>