force-app/main/default/objects/Vote_Record__c/fields/Vote__c.field-meta.xml
<CustomField>
    <fullName>Vote__c</fullName>
    <description>Field to store the vote that a user made for the record.</description>
    <label>Vote</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upvote</fullName>
            </value>
            <value>
                <fullName>Downvote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>